# voice_assistant

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Justfile  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: b189eb68fa3c_calendar_data.py  c98cce3bd58f_initial.py  cc77b6120219_initial.py  faeab7b7a397_calendar_data.py
app_interfaces/: i_command_performer.py  i_command_recognizer.py  i_messages_source.py
app_utils/: utils.py
command_recognizer/: command_recognizer_simple.py
commands/command_get_current_os/: command_get_current_os.py
commands/command_get_current_time/: command_get_current_time.py
docker/: .docker.env  Dockerfile  docker-compose.yml
examples/: claude_desktop_config.json
flows/: agent_flow.json
just/: deploy.just  docker.just  git.just  utils.just
langflow_components/: time_keeper.py  tk_new_activity.py  tk_old_activity.py
massages_source/: messages_source.py
mcp_server/: main.py
mcp_server/al_modules/: calendar.py  database.py  helpers.py  settings.py
message_recognizer_local_mic/: message_recognizer_local_mic.py
messages_local_mic/: _command_performer.py  _commands.py  audio.py  config.py  main.py  utils.py
messages_local_mic/interfaces/: i_command_performer.py  i_messages_recognizer.py
mk/: common.mk  consts.mk  deploy.mk  docker.mk  git.mk  utils.mk
project/: main.py
project/commands/: notion.py  time_keeper.py
proxy/: proxy.py
scripts/: bump_version.sh
tests/: test_settings.py
voice_assistant/: __init__.py  command_processer.py  command_recognizer.py  main.py  message_source.py  settings.py  sources.py
voice_assistant/agent/: factory.py  openai_agent.py  settings.py
voice_assistant/app_interfaces/: __init__.py  audio_recognizer.py  command_iterator.py  command_performer.py  command_source.py  i_command_performer.py  i_command_recognizer.py  i_message_recognizer.py  i_messages_recognizer.py  i_messages_source.py  llm_module.py  message_recognizer.py  source_factory.py  toolset.py  topic_definer.py  user_agent.py
voice_assistant/app_utils/: app_types.py  base_settings.py  config.py  logs_settings.py  settings.py  types.py  utils.py  yaml_utils.py
voice_assistant/app_utils/settings_utils/: common.py  helpers.py  lazy_nested.py  yaml_utils.py
voice_assistant/assistant_core/: command_recognizer.py  context.py
voice_assistant/base_commands/: llm_question.py
voice_assistant/command_performers/: performer.py  performer_factory.py
voice_assistant/command_recognizer/: __init__.py
voice_assistant/command_recognizer/gpt/: __init__.py  command_recognizer_gpt.py  gigachat_module.py  i_gpt_module.py  yagpt_module.py
voice_assistant/command_recognizer/simple/: command_recognizer_simple.py
voice_assistant/command_sources/: enums.py  factory.py  sources.py  sources_factory.py
voice_assistant/command_sources/api_source/: Dockerfile  docker-compose.yml  source.py
voice_assistant/command_sources/cli_command_sourcee/: command_source.py
voice_assistant/command_sources/local_voice_command_source/: command_source.py  factory.py  microphone_listener.py
voice_assistant/command_sources/telegram_source/: command_source.py  factory.py  settings.py  utils.py
voice_assistant/command_sources/web_voice_command_source/: command_source.py  factory.py
voice_assistant/commands/: __init__.py  notion.py  time_keeper.py
voice_assistant/commands/command_get_current_os/: command_get_current_os.py
voice_assistant/commands/command_get_current_time/: command_get_current_time.py
voice_assistant/commands/gpt/: default.py  llm_question.py  notion.py  time_keeper.py
voice_assistant/commands/test_commands/: get_current_os.py  get_current_time.py
voice_assistant/commands_iterators/: cli_command_iterator.py  cli_iterator.py
voice_assistant/commands_iterators/voice_command_iterator/: iterator.py  stt_module.py  utils.py
voice_assistant/commands_sources/: cli_command_source.py
voice_assistant/commands_sources/voice_command_source/: command_source.py
voice_assistant/database/: core.py  models.py  schema.py
voice_assistant/database/calendar_data/: calendar_data.py  cli.py
voice_assistant/llm_clients/: gigachat_client.py
voice_assistant/massages_source/: __init__.py  messages_source.py
voice_assistant/message_recognizer/: __init__.py
voice_assistant/message_recognizer/local_mic/: message_recognizer_local_mic.py
voice_assistant/message_recognizers/: text_source_cli.py  text_source_local_mic.py
voice_assistant/services/: calendar.py  google_settings.py  memory.py
voice_assistant/services/calendar/: calendar_data.py  creds.py  service.py  settings.py
voice_assistant/services/composio/: factory.py  settings.py
voice_assistant/services/sheet/: service.py
voice_assistant/sst_modules/: api_sst.py  factory.py  settings.py  sst_modules_factory.py  sst_whisper.py
voice_assistant/tools/: decorators.py  factory.py  test_tool.py  tools.py  tools_factory.py  utils.py
voice_assistant/tools/activity_logger/: factory.py  tools.py
voice_assistant/topic_definers/: __init__.py  llm_based.py  plain.py
voice_assistant/topic_definers/gpt/: __init__.py  gpt.py
voice_assistant/topic_definers/simple/: simple.py
voice_assistant/utils/: settings.py
voice_assistant/voxmind/app_utils/: settings.py  utils.py
voice_assistant/voxmind/assistant_core/: command_recognizer.py
voice_assistant/voxmind/base_commands/: get_current_os.py  get_current_time.py  llm_question.py
(+21 files in other folders)
