[tool.poetry]
name = "voice_assistant"
version = "0.1.1"
description = ""
authors = ["ewasince <ewasince@gmail.com>"]
readme = "README.md"

packages = [{ include = "voice_assistant" }]
#include = [
#    { path = "app_interfaces" },
#    { path = "app_utils" },
#    { path = "command_recognizer" },
#    { path = "commands/command_get_current_time" },
#    { path = "massages_source" },
#    { path = "message_recognizer" }
#]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
speechrecognition = "^3.10.0"
pyaudio = "^0.2.13"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"
isort = "^5.12.0"
black = "^23.10.1"

[tool.poetry.group.yagpt.dependencies]
selenium = "^4.14.0"

[tool.poetry.group.gigachat.dependencies]
gigachat = "^0.1.6"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
