[project]
name = "voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-gigachat>=0.3.10",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "speechrecognition>=3.14.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
deepseek = [
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
